--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -74,7 +74,7 @@ docker run --rm -d -p 3000:3000 mynote:latest
 npx create-docusaurus@latest tech-journey classic
 ```
 
-代码块高亮设置，可以参考：  
+代码块高亮设置参考：  
 [技术笔记](https://imroc.cc/note/docusaurus/codeblock)   
 [docusaurus 官方文档](https://docusaurus.io/zh-CN/docs/next/markdown-features/code-blocks)   
 [prism代码高亮支持语言](https://prismjs.com/#supported-languages)
