--- a/docs/1java/项目文档一般格式.md
+++ b/docs/1java/项目文档一般格式.md
@@ -4,7 +4,7 @@ sidebar_position: 98
 
 # 服务端项目文档
 
-## 目录[<sup>1</sup>](#reference-anchor-1)
+## 目录[<sup>[1]</sup>](#reference-anchor-1)
 
 
 ## 1 项目概述
@@ -14,7 +14,7 @@ sidebar_position: 98
 描述项目的主要模块、数据流程和系统架构的关系。
 ## 4 开发环境
 说明项目开发所需的硬件和软件环境。
-## 5 设计说明[<sup>2</sup>](#reference-anchor-2)
+## 5 设计说明[<sup>[2]</sup>](#reference-anchor-2)
 ## 6 中间件
 ### 6.1 消息中间件
 ### 6.2 缓存中间件
